# orbital-eye

./: .gitignore  Makefile  README.md  go.mod  go.sum  pyproject.toml
ai/: detector_pb2.py  detector_pb2_grpc.py  requirements.txt  server.py
cmd/orbital-eye/: main.go
data/equipment/: README.md
data/known_facilities/: README.md
docs/: data-sources.md
internal/collector/: sentinel.go
internal/config/: config.go
internal/detector/: client.go
internal/geo/: geo.go
internal/report/: report.go
proto/: detector.pb.go  detector.proto  detector_grpc.pb.go
scripts/: download_datasets.sh
src/: __init__.py  api.py  cli.py
src/analyzers/: activity.py  attribution.py  change.py  measure.py
src/collectors/: __init__.py  landsat.py  planet.py  sentinel.py  tiles.py
src/detectors/: __init__.py  aircraft.py  facilities.py  infrastructure.py  vehicles.py  vessels.py
src/visualizers/: __init__.py  annotate.py  dashboard.py  map.py  report.py
