[project]
name = "orbital-eye"
version = "0.1.0"
description = "AI-powered satellite imagery intelligence platform for OSINT"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "clearclown" }]
keywords = ["osint", "satellite", "intelligence", "military", "detection", "geospatial"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Scientific/Engineering :: Image Recognition",
]
dependencies = [
    "torch>=2.0",
    "torchvision>=0.15",
    "ultralytics>=8.0",         # YOLOv8
    "rasterio>=1.3",            # GeoTIFF handling
    "geopandas>=0.14",          # Geospatial data
    "shapely>=2.0",             # Geometry operations
    "sentinelsat>=1.2",         # Sentinel-2 API
    "planetary-computer>=1.0",  # Microsoft Planetary Computer
    "pystac-client>=0.7",       # STAC catalog search
    "stackstac>=0.5",           # STAC → xarray
    "opencv-python>=4.8",
    "pillow>=10.0",
    "numpy>=1.24",
    "matplotlib>=3.8",
    "folium>=0.15",             # Interactive maps
    "fastapi>=0.110",           # API server
    "uvicorn>=0.27",
    "jinja2>=3.1",              # Report templates
    "typer>=0.12",              # CLI
    "rich>=13.0",               # Terminal output
    "httpx>=0.27",              # HTTP client
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.5", "mypy>=1.10"]
training = ["albumentations>=1.4", "wandb>=0.17"]
sar = ["sarpy>=1.3"]

[project.scripts]
orbital-eye = "orbital_eye.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py311"
line-length = 100
